--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,6 +53,7 @@
         "--no-warnings",
         "--experimental-vm-modules",
         "node_modules/jest/bin/jest.js",
+        "--verbose",
         "--coverage",
         "--maxWorkers=100%"
       ],
@@ -112,11 +113,39 @@
         "--no-warnings",
         "--experimental-vm-modules",
         "node_modules/jest/bin/jest.js",
+        "--verbose",
         "--coverage",
         "--maxWorkers=100%",
         "matterbridgeEndpoint.test.ts",
         "matterbridgeEndpoint-default.test.ts",
         "matterbridgeEndpoint-matterjs.test.ts"
+      ],
+      "group": {
+        "kind": "test",
+        "isDefault": false
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Test: Endpoint Classes",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "--no-warnings",
+        "--experimental-vm-modules",
+        "node_modules/jest/bin/jest.js",
+        "--verbose",
+        "--coverage",
+        "--maxWorkers=100%",
+        "src/devices/base.test.ts",
+        "src/devices/laundryWasher.test.ts",
+        "src/devices/laundryDryer.test.ts",
+        "src/devices/roboticVacuumCleaner.test.ts",
+        "src/devices/evse.test.ts",
+        "src/devices/waterHeater.test.ts",
+        "src/devices/solarPower.test.ts",
+        "src/devices/batteryStorage.test.ts",
+        "src/devices/heatPump.test.ts"
       ],
       "group": {
         "kind": "test",
@@ -132,6 +161,7 @@
         "--no-warnings",
         "--experimental-vm-modules",
         "node_modules/jest/bin/jest.js",
+        "--verbose",
         "--coverage",
         "--maxWorkers=100%",
         "matterbridgePlatform.test.ts",
@@ -145,13 +175,14 @@
       "problemMatcher": []
     },
     {
-      "label": "Test: Plugins",
+      "label": "Test: PluginManager",
       "type": "shell",
       "command": "node",
       "args": [
         "--no-warnings",
         "--experimental-vm-modules",
         "node_modules/jest/bin/jest.js",
+        "--verbose",
         "--coverage",
         "--maxWorkers=100%",
         "pluginManager.test.ts"
@@ -163,16 +194,39 @@
       "problemMatcher": []
     },
     {
-      "label": "Test: Devices",
+      "label": "Test: DeviceManager",
       "type": "shell",
       "command": "node",
       "args": [
         "--no-warnings",
         "--experimental-vm-modules",
         "node_modules/jest/bin/jest.js",
+        "--verbose",
         "--coverage",
         "--maxWorkers=100%",
         "deviceManager.test.ts"
+      ],
+      "group": {
+        "kind": "test",
+        "isDefault": false
+      },
+      "problemMatcher": []
+    },
+    {
+      "label": "Test: Dgram",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "--no-warnings",
+        "--experimental-vm-modules",
+        "node_modules/jest/bin/jest.js",
+        "--verbose",
+        "--coverage",
+        "--maxWorkers=100%",
+        "dgram.test.ts",
+        "unicast.test.ts",
+        "multicast.test.ts",
+        "mdns.test.ts",
       ],
       "group": {
         "kind": "test",
