--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -43,7 +43,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "matterbridge": "bin/matterbridge"
+    "matterbridge": "bin/matterbridge.js"
   },
   "engines": {
     "node": ">=18.0.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
@@ -157,20 +157,20 @@
     "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "9.30.1",
+    "@eslint/js": "9.31.0",
     "@jest/globals": "29.7.0",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "24.0.13",
+    "@types/node": "24.0.14",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/eslint-plugin": "1.3.4",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "51.3.4",
+    "eslint-plugin-jsdoc": "51.4.0",
     "eslint-plugin-n": "17.21.0",
     "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-promise": "7.2.1",
@@ -183,7 +183,7 @@
     "shx": "0.4.0",
     "ts-jest": "29.4.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.36.0",
+    "typescript-eslint": "8.37.0",
     "vitest": "3.2.4"
   }
 }
