Update workflows to improve Docker build triggers and enhance changelog

--- a/.github/workflows/docker-buildx-main.yml
+++ b/.github/workflows/docker-buildx-main.yml
@@ -2,7 +2,7 @@ name: Build Docker Image latest with buildx
 
 on:
   # Allow manual dispatch and trigger from publish.yml
-  # Use with:
+  # Use in other repository workflows with:
   # - name: Trigger Matterbridge Docker Build Main
   #   uses: actions/github-script@v7
   #   with:
