--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -17,10 +17,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: dev
-          # fetch-depth: 0
-          # Ensure full history is available for versioning
-          # This is important to ensure that the git SHA is accurate for the versioning
-          # and to allow the script to check if the dev version has changed since the last publish.
 
       - name: Set up Node.js & registry
         uses: actions/setup-node@v4
@@ -95,3 +91,16 @@ jobs:
         run: npm publish --tag dev
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Trigger Matterbridge Docker Build Dev
+        if: steps.check_new.outputs.should_publish  == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: 'docker-buildx-dev.yml',
+              ref: 'dev'
+            })
