Add more Jest tests for the workflows

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -249,6 +249,7 @@
         "--verbose",
         "--coverage",
         "--maxWorkers=100%",
+        "spawn.test.ts",
         "update.test.ts"
       ],
       "group": {
