--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "mb_coap": "bin/mb_coap.js"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
+    "node": ">=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
   "exports": {
     ".": {
