--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
       - 'screenshot/**' # any file under screenshot/
       - '**/*.md' # any .md anywhere
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [20.x, 22.x, 24.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-15]
 
     steps:
       - name: Checkout repository
@@ -61,5 +62,8 @@ jobs:
           npm outdated || true
           npm audit || true
           npm audit fix || true
+          npm update || true
           npm outdated || true
+          npm run format || true
+          npm run lint:fix || true
           npm run build
