--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.1.8",
+  "version": "3.2.0",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -48,7 +48,7 @@
     "mb_coap": "bin/mb_coap.js"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0 || >=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
+    "node": ">=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
   "exports": {
     ".": {
@@ -149,7 +149,7 @@
     "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
-    "@matter/main": "0.15.1",
+    "@matter/main": "0.15.2",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.3",
@@ -159,7 +159,7 @@
     "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "9.31.0",
+    "@eslint/js": "9.32.0",
     "@jest/globals": "29.7.0",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.3",
@@ -172,16 +172,15 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "51.4.1",
-    "eslint-plugin-n": "17.21.0",
+    "eslint-plugin-jsdoc": "52.0.1",
+    "eslint-plugin-n": "17.21.3",
     "eslint-plugin-prettier": "5.5.3",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
-    "jest": "29.7.0 ",
+    "jest": "29.7.0",
     "npm-check-updates": "18.0.2",
     "prettier": "3.6.2",
-    "rimraf": "6.0.1",
     "shx": "0.4.0",
     "ts-jest": "29.4.0",
     "typescript": "5.8.3",
