Add concurrency settings to Docker build workflows to cancel in-progress runs

--- a/.github/workflows/docker-buildx-edge.yml
+++ b/.github/workflows/docker-buildx-edge.yml
@@ -4,6 +4,11 @@ on:
   # Allow manual dispatch
   workflow_dispatch:
 
+# Cancel previous runs when a new one is triggered
+concurrency:
+  group: docker-build-edge
+  cancel-in-progress: true
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
