--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -22,7 +22,6 @@
     "bridge",
     "plugin",
     "frontend",
-    "matterbridge",
     "matter.js",
     "matter-node.js",
     "matter",
@@ -148,8 +147,11 @@
     "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
     "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
   },
+  "overrides": {
+    "typescript": "5.9.2"
+  },
   "dependencies": {
-    "@matter/main": "0.15.2",
+    "@matter/main": "0.15.3",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.3",
@@ -165,16 +167,16 @@
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "24.1.0",
+    "@types/node": "24.2.0",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/eslint-plugin": "1.3.4",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "52.0.1",
+    "eslint-plugin-jsdoc": "52.0.4",
     "eslint-plugin-n": "17.21.3",
-    "eslint-plugin-prettier": "5.5.3",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
@@ -182,9 +184,9 @@
     "npm-check-updates": "18.0.2",
     "prettier": "3.6.2",
     "shx": "0.4.0",
-    "ts-jest": "29.4.0",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.38.0",
+    "ts-jest": "29.4.1",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0",
     "vitest": "3.2.4"
   }
 }
