--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,8 @@
   */
   // On startup, update npm, pnpm, install the dev of matterbridge and install the dependencies from package.json
   "postCreateCommand": "echo '1 - Installing updates ...' && sudo npm install -g npm@latest pnpm@latest npm-check-updates shx && echo '2 - Setting permissions ...' && sudo chown -R node:node . && echo '3 - Building the package ...' && npm install && npm run build && npm outdated || true",
+  // Give the Docker container the same name as the repository (must be unique on host)
+  "runArgs": ["--name", "${localWorkspaceFolderBasename}"],
   "customizations": {
     "vscode": {
       // Extensions to install in the dev container
