--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
           npm audit || true
           npm audit fix || true
           npm update || true
+          npx npm-check-updates -u || true
           npm outdated || true
           npm run format || true
           npm run lint:fix || true
