--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run clean && npm install && npm run build && npm link && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
+    "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
