Add Jest helpers module

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -257,9 +257,23 @@
         "--verbose",
         "--coverage",
         "--maxWorkers=100%",
+        "utils.test.ts",
+        "wait.test.ts",
         "spawn.test.ts",
         "update.test.ts",
-        "network.test.ts"
+        "network.test.ts",
+        "copyDirectory.test.ts",
+        "createDirectory.test.ts",
+        "createZip.mocked.test.ts",
+        "createZip.real.test.ts",
+        "deepCopy.test.ts",
+        "deepEqual.test.ts",
+        "error.test.ts",
+        "hex.test.ts",
+        "isvalid.test.ts",
+        "network.test.ts",
+        "network.update.test.ts",
+        "network.version.test.ts",
       ],
       "group": {
         "kind": "test",
