--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.2.6",
+  "version": "3.2.7",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -124,6 +124,7 @@
     "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run clean && npm install && npm run build && npm link && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
+    "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
@@ -158,20 +159,20 @@
     "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "9.34.0",
+    "@eslint/js": "9.35.0",
     "@jest/globals": "30.1.2",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "24.3.0",
+    "@types/node": "24.3.1",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "3.2.4",
-    "@vitest/eslint-plugin": "1.3.8",
+    "@vitest/eslint-plugin": "1.3.9",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "54.3.1",
+    "eslint-plugin-jsdoc": "54.4.1",
     "eslint-plugin-n": "17.21.3",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
