--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,8 +3,16 @@ name: Codecov
 on:
   push:
     branches: [main]
+    paths-ignore:
+      - 'docs/**' # any file under docs/
+      - 'screenshot/**' # any file under screenshot/
+      - '**/*.md' # any .md anywhere
   pull_request:
     branches: [main]
+    paths-ignore:
+      - 'docs/**' # any file under docs/
+      - 'screenshot/**' # any file under screenshot/
+      - '**/*.md' # any .md anywhere
   workflow_dispatch:
 
 jobs:
