--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "2.8.0",
   "private": true,
   "homepage": "./",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
