--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "lint": "npx eslint .",
-    "eslint": "eslint \"frontend/src/**/*.{ts,tsx,js,jsx}\"",
     "test": "vitest run",
     "test:watch": "vitest --reporter verbose",
     "test:verbose": "vitest run --reporter verbose",
@@ -22,6 +21,7 @@
     "deepCleanRebuild": "npm run deepClean && npm install && npm run build && npm run test",
     "checkDependencies": "npx npm-check-updates",
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
+    "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm run install:all && npm run build && npm run test",
     "install:all": "npm run install:react && npm run install:emotion && npm run install:muimaterial && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:react-table && npm run install:typescript && npm run install:vite && npm run install:vitest",
     "install:react": "npm install react react-dom react-router react-router-dom --omit=dev",
@@ -64,10 +64,10 @@
     "@eslint/js": "^9.35.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.5.0",
+    "@types/node": "^24.5.1",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.35.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
