Add types and tests to frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm run install:all && npm run build && npm run test",
     "install:all": "npm run install:react && npm run install:emotion && npm run install:muimaterial && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:react-table && npm run install:typescript && npm run install:vite && npm run install:vitest",
-    "install:react": "npm install react react-dom react-router react-router-dom --omit=dev",
+    "install:react": "npm install react react-dom react-router react-router-dom --omit=dev && npm install --save-dev @types/react @types/react-dom",
     "install:emotion": "npm install @emotion/react @emotion/styled --omit=dev",
     "install:muimaterial": "npm install @mui/material @mui/icons-material --omit=dev",
     "install:mdi": "npm install @mdi/js @mdi/react --omit=dev",
@@ -66,6 +66,8 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.5.1",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "@vitejs/plugin-react": "^5.0.3",
