--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,12 +6,12 @@
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
     "vitest/**/*.ts",
     "vitest/**/*.tsx"
-  ]
+  ],
 }
