Type HomePlugin frontend component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "install:qrcode": "npm install qrcode.react --omit=dev",
     "install:notistack": "npm install notistack --omit=dev",
     "install:rjsf": "npm install @rjsf/core @rjsf/utils @rjsf/validator-ajv8 --omit=dev",
-    "install:react-table": "npm install react-table@latest --omit=dev",
+    "install:react-table": "npm install react-table@latest --omit=dev && npm install --save-dev @types/react-table",
     "install:typescript": "npm install --save-dev typescript @types/node",
     "install:vite": "npm install --save-dev vite @vitejs/plugin-react",
     "install:vitest": "npm install --save-dev vitest jsdom @testing-library/react @testing-library/jest-dom",
@@ -68,6 +68,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "@vitejs/plugin-react": "^5.0.3",
