--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -26,36 +26,38 @@ jobs:
 
       - name: Clean cache
         run: npm cache clean --force
+        working-directory: frontend
 
       - name: Verify Node.js version
         run: node -v
+        working-directory: frontend
 
       - name: Verify Npm version
         run: npm -v
-
-      - name: Cd frontend
-        run: cd frontend
+        working-directory: frontend
 
       - name: Install dependencies
         run: npm ci
+        working-directory: frontend
 
       - name: Lint the project
         run: npm run lint
+        working-directory: frontend
 
       - name: Build the project
         run: npm run build
+        working-directory: frontend
 
       - name: Test the project
         run: npm run test
+        working-directory: frontend
 
-      - name: List, audit, fix outdated dependencies and build again
+      - name: List, audit, fix outdated dependencies, update and build again
         run: |
           npm outdated || true
           npm audit || true
           npm audit fix || true
           npm update || true
-          npx npm-check-updates -u || true
-          npm install || true
-          npm outdated || true
-          npm run lint:fix || true
+          npm run lint || true
           npm run build
+        working-directory: frontend
