--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,10 @@
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm run install:all && npm run build && npm run test",
-    "install:all": "npm run install:react && npm run install:emotion && npm run install:muimaterial && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:react-table && npm run install:typescript && npm run install:vite && npm run install:vitest",
+    "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint",
     "install:react": "npm install react react-dom react-router react-router-dom --omit=dev && npm install --save-dev @types/react @types/react-dom",
     "install:emotion": "npm install @emotion/react @emotion/styled --omit=dev",
-    "install:muimaterial": "npm install @mui/material @mui/icons-material --omit=dev",
+    "install:mui": "npm install @mui/material @mui/icons-material --omit=dev",
     "install:mdi": "npm install @mdi/js @mdi/react --omit=dev",
     "install:qrcode": "npm install qrcode.react --omit=dev",
     "install:notistack": "npm install notistack --omit=dev",
@@ -55,17 +55,15 @@
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
     "@typescript-eslint/parser": "^8.44.0",
     "@vitejs/plugin-react": "^5.0.3",
-    "eslint": "^9.35.0",
+    "eslint": "^9.36.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^27.0.0",
