--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -44,6 +44,10 @@ jobs:
         run: npm run lint
         working-directory: frontend
 
+      - name: Typecheck the project
+        run: npm run typecheck
+        working-directory: frontend
+
       - name: Build the project
         run: npm run build
         working-directory: frontend
