--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm run install:all && npm run build && npm run test",
-    "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint",
+    "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint && npm run install:prettier",
     "install:react": "npm install react react-dom react-router react-router-dom --omit=dev && npm install --save-dev @types/react @types/react-dom",
     "install:emotion": "npm install @emotion/react @emotion/styled --omit=dev",
     "install:mui": "npm install @mui/material @mui/icons-material --omit=dev",
