--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "3.0.0",
+  "version": "3.2.0",
   "private": true,
   "homepage": "./",
   "type": "module",
@@ -12,6 +12,8 @@
     "typecheck": "tsc --project ./tsconfig.json --noEmit",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix --max-warnings=0 .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "test": "vitest run",
     "test:watch": "vitest --reporter verbose",
     "test:verbose": "vitest run --reporter verbose",
@@ -24,7 +26,7 @@
     "updateDependencies": "npx npm-check-updates -u && npm install & npm run cleanBuild",
     "runMeBeforePublish": "npm run lint && npm run build && npm run test",
     "reset": "npm run deepClean && npm run install:all && npm run build && npm run test",
-    "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint",
+    "install:all": "npm run install:react && npm run install:emotion && npm run install:mui && npm run install:mdi && npm run install:qrcode && npm run install:notistack && npm run install:rjsf && npm run install:typescript && npm run install:vite && npm run install:vitest && npm run install:eslint && npm run install:prettier",
     "install:react": "npm install react react-dom react-router react-router-dom --omit=dev && npm install --save-dev @types/react @types/react-dom",
     "install:emotion": "npm install @emotion/react @emotion/styled --omit=dev",
     "install:mui": "npm install @mui/material @mui/icons-material --omit=dev",
@@ -35,7 +37,8 @@
     "install:typescript": "npm install --save-dev typescript @types/node",
     "install:vite": "npm install --save-dev vite @vitejs/plugin-react",
     "install:vitest": "npm install --save-dev vitest jsdom @testing-library/react @testing-library/jest-dom",
-    "install:eslint": "npm install --save-dev eslint eslint-plugin-react eslint-plugin-react-hooks typescript-eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser"
+    "install:eslint": "npm install --save-dev eslint eslint-plugin-react eslint-plugin-react-hooks typescript-eslint @typescript-eslint/eslint-plugin @typescript-eslint/parser",
+    "install:prettier": "npm install --save-dev prettier eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -51,25 +54,28 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.1",
-    "react-router-dom": "^7.9.1"
+    "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
+    "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^8.44.0",
-    "@typescript-eslint/parser": "^8.44.0",
-    "@vitejs/plugin-react": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^27.0.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.6",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.7",
     "vitest": "^3.2.4"
   }
 }
