--- a/src/mock/plugin1/package.json
+++ b/src/mock/plugin1/package.json
@@ -6,8 +6,5 @@
   "license": "Apache-2.0",
   "type": "module",
   "main": "./index.js",
-  "types": "./index.d.ts",
-  "scripts": {
-    "install": "node link-matterbridge-script.js"
-  }
+  "types": "./index.d.ts"
 }
