--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -289,5 +289,23 @@
       ],
       "label": "npm: lint"
     }
+    ,
+    {
+      "label": "Test: Workers",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "--no-warnings",
+        "--experimental-vm-modules",
+        "node_modules/jest/bin/jest.js",
+        "--verbose",
+        "--coverage",
+        "--maxWorkers=100%",
+        "src/workers/cpuUsage.test.ts",
+        "src/workers/memoryUsage.test.ts"
+      ],
+      "group": { "kind": "test", "isDefault": false },
+      "problemMatcher": []
+    }
   ]
 }
