--- a/package.json
+++ b/package.json
@@ -106,12 +106,12 @@
     "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
-    "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js --debug",
-    "start:gc": "node --expose-gc ./dist/cli.js --debug",
-    "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug",
-    "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug",
     "start:bridge": "node ./dist/cli.js --bridge",
     "start:childbridge": "node ./dist/cli.js --childbridge",
+    "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js --debug --trace --loader",
+    "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
+    "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
+    "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
     "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100%",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
