--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -282,15 +282,6 @@
       "problemMatcher": []
     },
     {
-      "type": "npm",
-      "script": "lint",
-      "problemMatcher": [
-        "$eslint-stylish"
-      ],
-      "label": "npm: lint"
-    }
-    ,
-    {
       "label": "Test: Workers",
       "type": "shell",
       "command": "node",
@@ -306,6 +297,34 @@
       ],
       "group": { "kind": "test", "isDefault": false },
       "problemMatcher": []
+    },
+    {
+      "label": "Test: Cli",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "--no-warnings",
+        "--experimental-vm-modules",
+        "node_modules/jest/bin/jest.js",
+        "--verbose",
+        "--coverage",
+        "--maxWorkers=100%",
+        "src/cli.test.ts",
+        "src/cli.error.test.ts",
+        "src/cli.error2.test.ts",
+        "src/cliEmitter.test.ts",
+        "src/cliHistory.test.ts"
+      ],
+      "group": { "kind": "test", "isDefault": false },
+      "problemMatcher": []
+    },
+    {
+      "type": "npm",
+      "script": "lint",
+      "problemMatcher": [
+        "$eslint-stylish"
+      ],
+      "label": "npm: lint"
     }
   ]
 }
