--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ temp/
 *.log
 
 # Package specific directories and files that should be ignored
-heap_profile
+heap_profiles
+heap_snapshots
 TODO.md
 crypto
 docs/Matter specifications/
