--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matterbridge",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "Matterbridge plugin manager for Matter",
   "author": "https://github.com/Luligu",
   "license": "Apache-2.0",
@@ -106,9 +106,12 @@
     "cleanBuildProduction": "npx shx rm -rf tsconfig.tsbuildinfo dist && npm run buildProduction",
     "watch": "tsc --watch",
     "start": "node ./dist/cli.js",
-    "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js -debug",
-    "start:bridge": "node ./dist/cli.js -bridge",
-    "start:childbridge": "node ./dist/cli.js -childbridge",
+    "start:bridge": "node ./dist/cli.js --bridge",
+    "start:childbridge": "node ./dist/cli.js --childbridge",
+    "start:inspect": "node --inspect=0.0.0.0:9229 ./dist/cli.js --debug --trace --loader",
+    "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
+    "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
+    "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
     "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --maxWorkers=100%",
     "test:coverage": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --maxWorkers=100%",
     "test:verbose": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --verbose --maxWorkers=100%",
@@ -149,7 +152,7 @@
     "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier"
   },
   "dependencies": {
-    "@matter/main": "0.15.4",
+    "@matter/main": "0.15.5",
     "archiver": "7.0.1",
     "express": "5.1.0",
     "glob": "11.0.3",
@@ -159,32 +162,30 @@
     "ws": "8.18.3"
   },
   "devDependencies": {
-    "@eslint/js": "9.36.0",
-    "@jest/globals": "30.1.2",
+    "@eslint/js": "9.37.0",
+    "@jest/globals": "30.2.0",
     "@types/archiver": "6.0.3",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "24.5.2",
+    "@types/node": "24.7.0",
     "@types/ws": "8.18.1",
     "@vitest/coverage-v8": "3.2.4",
-    "@vitest/eslint-plugin": "1.3.13",
+    "@vitest/eslint-plugin": "1.3.16",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.0.1",
-    "eslint-plugin-jsdoc": "60.4.1",
+    "eslint-plugin-jsdoc": "61.0.1",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
-    "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "jest": "30.1.3",
-    "npm-check-updates": "18.3.0",
+    "jest": "30.2.0",
+    "npm-check-updates": "19.0.0",
     "prettier": "3.6.2",
     "shx": "0.4.0",
     "ts-jest": "29.4.4",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.44.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.0",
     "vitest": "3.2.4"
   }
 }
