Add update check and icon to update dev in the Header and remove the yellow badges

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ temp/
 *.log
 
 # Package specific directories and files that should be ignored
+heap_profile
 heap_profiles
 heap_snapshots
 TODO.md
