--- a/.npmignore
+++ b/.npmignore
@@ -42,6 +42,7 @@ vite.config.*
 # Package specific directories and files that should be ignored
 docker
 systemd
+heap_profile
 heap_profiles
 heap_snapshots
 crypto
